# vlc-capture-example

./: .gitignore  CMakeLists.txt  README.md  build_ninja.cmd  build_ninja.sh  build_v141_x64.cmd
cmake/: compile_definitions.cmake  compile_options.cmake  dependencies.cmake  iwyu.cmake  post_build.cmake  sources.cmake
src/: main.cpp
